crates/toml_edit/tests/snapshots/invalid/datetime/no-year-month-sep.stderr
TOML parse error at line 1, column 7
  |
1 | foo = 199709-09
  |       ^^^^^^^^^
invalid date, expected `-` (MM-DD)
